# accident-prediction-montreal

./: pyproject.toml  requirements.txt
accident_prediction_montreal/: accidents_montreal.py  export_results.py  preprocess.py  random_forest.py  road_network.py  utils.py  weather.py  weather_id_async.py
mains/: main_brf.py  main_gen_match.py  main_make_weather_cache.py  main_negative_samples.py  main_positive_samples.py  main_random_forest.py  main_train_base.py  main_train_brf.py  main_train_rf.py  main_train_urf.py  main_weather_stations_id.py  main_xgboost.py
tests/: test_weather.py  test_weather_id_async.py
tests/data/preprocessed_accidents_sample.parquet/: .part-00000-ef45f4e9-3659-490e-8567-7b1fb8a7421d-c000.snappy.parquet.crc  part-00000-ef45f4e9-3659-490e-8567-7b1fb8a7421d-c000.snappy.parquet
