[tool.poetry]
name = "accident-prediction-montreal"
version = "0.1.0"
description = ""
authors = ["Antoine Hébert <hantoine02@gmail.com>", "Timothée Guédon <ava_punksmash@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "*"
scipy = "*"
beautifulsoup4 = "*"
dask = {extras = ["bag"], version = "*"}
pandas = "*"
ipykernel = "*"
tables = "*"
pycodestyle = "*"
requests = "*"
pytest = "*"
coverage = "*"
matplotlib = "*"
pyarrow = "*"
pyspark = "*"
py4j = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
